tests/valid/lui.s
_start:
    lui r2, 0x55AAA000
    lui r31, 0x55AAAC00
