tests/invalid/bad_missing_imm.s
_start:
  add r0, r0
